fix: round 4-5 code review — 13 issues fixed
R4-1 [critical]: Remove duplicate onDestroy() method in MonitorService
R4-2 [critical]: Remove redundant Thread wrapping dbExecutor.execute()
R4-4 [logic]: Hide notification button on Android < 13
R4-5 [logic]: Fix handler init order in ProcessActivity

R5-1 [critical]: Move MonitorService.performSample file I/O to workExecutor thread
R5-2 [critical]: Remove duplicate /proc/stat sampling in Service (MainActivity owns CPU calc)
R5-3 [medium]: Replace LinkedList with CopyOnWriteArrayList in RealTimeChartView for thread safety
R5-4 [medium]: Remove unused coreFreqs variable in MonitorService
R5-5 [medium]: Fix ListView height collapse in ScrollView (set fixed 320dp)
R5-6 [low]: Add try-catch for parseInt in ProcessMonitor
R5-8 [low]: Remove unused work-runtime dependency and WorkManager code